# zaino

./: .dockerignore  .env.testing-artifacts  .gitignore  .hadolint.yaml  .shellcheckrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  connect_to_node_get_info_staged.md  entrypoint.sh  failing_tests.txt  flake.nix  rustfmt.toml  stable_tests.txt
.config/: containers.conf  nextest.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: architecture.yaml  bug_report.yaml  code_smell.yaml  config.yml  feature_request.yaml  task.yaml
.github/workflows/: auto-tag-rc.yml  build-n-push-ci-image.yaml  ci-nightly.yaml  ci.yml  compute-tag.yml  final-tag-on-stable.yml  release.yaml  shellcheck.yaml  trigger-integration-tests.yml
.utils/: functions.sh  get-ci-image-tag.sh  precommit-check.sh
.utils/makefiles/: notify.toml  rocksdb.toml
ci/: copy-bins.sh
docs/: docker.md  internal_spec.md  logging.md  rpc_api.md  testing.md  tutorial.md  updating_zebra_crates.md  use_cases.md
docs/adr/: 0001-zcashd-support-feature-gate.md
docs/decision_records/release/: periodic.md
docs/example_configs/: zainod.toml  zebrad_config_3.1.0.toml
integration-tests/: Cargo.toml  quick_test.txt
integration-tests/.config/: nextest.toml
integration-tests/src/: lib.rs
integration-tests/test-stash/: fetch_service.rs  json_server.rs  state_service.rs  test_vectors.rs
integration-tests/test_environment/: Containerfile  entrypoint.sh  test-container-permissions.sh
integration-tests/tests/: chain_cache.rs  fetch_service.rs  json_server.rs  local_cache.rs  state_service.rs  test_vectors.rs  wallet_to_validator.rs
integration-tests/tests/zebra/get/: address_deltas.rs
integration-tests/wallet-tests/: Cargo.toml
integration-tests/wallet-tests/.config/: nextest.toml
integration-tests/wallet-tests/src/: devtool.rs  lib.rs
integration-tests/wallet-tests/tests/: devtool.rs  devtool_zcashd.rs  fetch_service.rs  json_server.rs  state_service.rs  test_vectors.rs  wallet_to_validator.rs
integration-tests/wallet-tests/tests/zebra/get/: address_deltas.rs
integration-tests/walletless-tests/: Cargo.toml
integration-tests/walletless-tests/src/: lib.rs
integration-tests/walletless-tests/tests/: chain_cache.rs  fetch_service.rs  json_server.rs  state_service.rs  test_vectors.rs  wallet_to_validator.rs
integration-tests/walletless-tests/tests/zebra/get/: address_deltas.rs
integration-tests/zaino-testutils/: Cargo.toml
integration-tests/zaino-testutils/src/: lib.rs
nix/: package.nix
test_environment/: Dockerfile  test-container-permissions.sh  test-docker-permissions.sh
tools/makefiles/: lints.toml
tools/scripts/: base-script-pre.sh  build-image.sh  cargo-update-unfrozen.sh  check-matching-zebras.sh  check-zaino-proto-heavy.rs  compute-image-tag.sh  container-nextest-workspace.sh  container-test-retry-failures.sh  container-test-save-failures.sh  container-test.sh  ensure-image-exists.sh  functions.sh  get-ci-image-tag.sh  get-container-hash.sh  get-podman-hash.sh  get-rust-version.sh  help.sh  init-podman-volumes.sh  integration-test-summary.sh  integration-test.sh  lint-shell.sh  precommit-check.sh  pull-ci-image.sh  push-image.sh  quick-minus-failing.py  thousand_runs.sh  trailing-whitespace.sh  update-test-targets.sh  validate-makefile-tasks.rs  validate-test-targets.sh  verify-all.sh
utils/: check_package.sh  get-docker-hash.sh  helpers.sh  trailing-whitespace.sh
zaino-common/: Cargo.toml
zaino-common/src/: lib.rs  logging.rs  net.rs  network.rs  probing.rs  status.rs  xdg.rs
zaino-common/src/config/: network.rs  storage.rs  validator.rs
zaino-fetch/: Cargo.toml
zaino-fetch/src/chain/: block.rs  transaction.rs
zaino-fetch/src/jsonrpsee/: connector.rs  response.rs
zaino-fetch/src/jsonrpsee/response/: address_deltas.rs  common.rs
zaino-fetch/src/jsonrpsee/response/common/: amount.rs
zaino-proto/: CHANGELOG.md  Cargo.toml  build.rs
zaino-proto/lightwallet-protocol/: CHANGELOG.md
zaino-proto/src/: lib.rs  proto.rs
zaino-proto/src/proto/: compact_formats.rs  service.rs  utils.rs
zaino-serve/: Cargo.toml
zaino-serve/src/rpc/grpc/: service.rs
zaino-serve/src/rpc/jsonrpc/: service.rs
zaino-serve/src/server/: config.rs  grpc.rs  jsonrpc.rs
zaino-state/: CHANGELOG.md  Cargo.toml
zaino-state/src/: chain_index.rs  chain_index_passthrough.mmd  config.rs  error.rs  indexer.rs  lib.rs  local_cache.rs  status.rs  stream.rs  utils.rs
zaino-state/src/backends/: fetch.rs  state.rs
zaino-state/src/chain_index/: finalised_state.rs  mempool.rs  non_finalised_state.rs  source.rs  tests.rs  types.rs
zaino-state/src/chain_index/finalised_state/: CHANGELOG.md  capability.rs  db.rs  entry.rs  migrations.rs  reader.rs  router.rs
zaino-state/src/chain_index/finalised_state/db/: v0.rs  v1.rs
zaino-state/src/chain_index/finalised_state/db/v1/: block_shielded.rs  compact_block.rs  read_core.rs  validation.rs  write_core.rs
zaino-state/src/chain_index/tests/: mempool.rs  proptest_blockgen.rs  vectors.rs
zaino-state/src/chain_index/tests/finalised_state/: migrations.rs  v0.rs  v1.rs
zaino-state/src/chain_index/types/db/: legacy.rs
zaino-testutils/: Cargo.toml
zaino-testutils/src/: lib.rs
zaino-testvectors/: Cargo.toml
zainod/: Cargo.toml  zebrad.toml  zindexer.toml
zainod/src/: cli.rs  config.rs  indexer.rs  lib.rs  main.rs
zainod/tests/: config.rs
