# Workspace Members are in dependency order, do not change this without prior consideration.
[workspace]
members = [
    "packages/zaino-common",
    "packages/zainod",
    "packages/zaino-serve",
    "packages/zaino-state",
    "packages/zaino-fetch",
    "packages/zaino-proto",
]
exclude = [
    "integration-tests",
    "zaino-testutils",
]

# Use the edition 2021 dependency resolver in the workspace, to match the crates
resolver = "2"

[workspace.package]
authors = ["Zingo Lab Cyan"]
repository = "https://github.com/zingolabs"
homepage = "https://www.zingolabs.org/"
edition = "2021"
license = "Apache-2.0"
version = "0.2.0"


[workspace.dependencies]

# Zingo

zingo_common_components =  "0.3.0"
zingo-netutils = { version = "4.0.0", features = ["back_compatible"] }
zingolib = { git = "https://github.com/zingolabs/zingolib.git", rev = "823a8f77b85592064ecd8daaa584a027766ee1ab", features = [
    "testutils",
] }
zingolib_testutils = { git = "https://github.com/zingolabs/zingolib.git", rev = "823a8f77b85592064ecd8daaa584a027766ee1ab" }
zingo_test_vectors = { git = "https://github.com/zingolabs/infrastructure.git", rev = "1a75152f4744b9e130a7d7f249a5b7691a6bf2fe" }
zcash_local_net = { git = "https://github.com/zingolabs/infrastructure.git", rev = "1a75152f4744b9e130a7d7f249a5b7691a6bf2fe" }


# Librustzcash
zcash_address = "0.10"
zcash_keys = "0.12"
zcash_protocol = "0.7.2"
zcash_primitives = "0.26.0"
zcash_transparent = "0.6.3"
zcash_client_backend = "0.21.0"

# Zebra
zebra-chain = "6.0.1"
zebra-state = "5.0.0"
zebra-rpc = "6.0.1"

# Runtime
tokio = { version = "1.38", features = ["full"] }
tokio-stream = "0.1"

# CLI
clap = "4.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = [
    "fmt",
    "env-filter",
    "time",
    "json",
] }
tracing-futures = "0.2"
tracing-tree = "0.4"
nu-ansi-term = "0.50"
atty = "0.2"
time = { version = "0.3", features = ["macros", "formatting"] }

# Network / RPC
http = "1.1"
url = "2.5"
reqwest = { version = "0.12", default-features = false, features = [
    "cookies",
    "rustls-tls",
] }
tower = { version = "0.4", features = ["buffer", "util"] }
tonic = { version = "0.14" }
tonic-build = "0.14"
prost = "0.14"
serde = "1.0"
serde_json = "1.0"
jsonrpsee-core = "0.24"
jsonrpsee-types = "0.24"
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
hyper = "1.6"

# Hashmaps, channels, DBs
indexmap = "2.2.6"
crossbeam-channel = "0.5"
dashmap = "6.1"
lmdb = "0.8"
lmdb-sys = "0.8"

# Async
async-stream = "0.3"
async-trait = "0.1"
futures = "0.3.30"

# Utility
thiserror = "1.0"
lazy-regex = "3.3"
once_cell = "1.20"
ctrlc = "3.4"
chrono = "0.4"
which = "4"
whoami = "1.5"
core2 = "0.4"

# Formats
base64 = "0.22"
byteorder = "1.5"
sha2 = "0.10"
blake2 = "0.10"
hex = "0.4"
toml = "0.5"
primitive-types = "0.13"
bs58 = "0.5"
bitflags = "2.9"

# Test
portpicker = "0.1"
tempfile = "3.2"
zaino-fetch = { path = "packages/zaino-fetch" }
zaino-proto = { path = "packages/zaino-proto" }
zaino-serve = { path = "packages/zaino-serve" }
zaino-state = { path = "packages/zaino-state" }
zaino-common = { path = "packages/zaino-common" }
wire_serialized_transaction_test_data = "1.0.0"
zainod = { path = "packages/zainod" }
config = { version = "0.15", default-features = false, features = ["toml"] }
nonempty = "0.11.0"
proptest = "~1.6"
zip32 = "0.2.1"

# Patch for vulnerable dependency
slab = "0.4.11"
anyhow = "1.0"
arc-swap = "1.7.1"
cargo-lock = "10.1.0"
derive_more = "2.0.1"
lazy_static = "1.5.0"

[patch.crates-io]
#zcash_client_backend = { git = "https://github.com/zcash/librustzcash", tag = "zcash_client_backend-0.21.0"}
#zcash_address = { git = "https://github.com/zcash/librustzcash", tag = "zcash_client_backend-0.21.0"}
#zcash_keys = { git = "https://github.com/zcash/librustzcash", tag = "zcash_client_backend-0.21.0"}
#zcash_primitives = { git = "https://github.com/zcash/librustzcash", tag = "zcash_client_backend-0.21.0"}
#zcash_protocol = { git = "https://github.com/zcash/librustzcash", tag = "zcash_client_backend-0.21.0"}
#zcash_transparent = { git = "https://github.com/zcash/librustzcash", tag = "zcash_client_backend-0.21.0"}

[profile.test]
opt-level = 3
debug = true
