[workspace]
members = [
    "walletless-tests",
    "zaino-testutils",
]
# wallet-tests is its own workspace (zingolib stack, separate Cargo.lock).
exclude = ["wallet-tests"]
resolver = "2"

[workspace.package]
authors = ["Zingo Lab Cyan"]
repository = "https://github.com/zingolabs"
homepage = "https://www.zingolabs.org/"
edition = "2021"
license = "Apache-2.0"
version = "0.2.0"

[workspace.dependencies]
# Workspace members
zaino-testutils = { path = "zaino-testutils" }

# Non-member path deps (from parent workspace)
zaino-proto = { path = "../packages/zaino-proto" }
zaino-state = { path = "../packages/zaino-state" }
zaino-serve = { path = "../packages/zaino-serve" }
zaino-common = { path = "../packages/zaino-common" }
zaino-fetch = { path = "../packages/zaino-fetch" }
zainod = { path = "../packages/zainod" }

# Zingo
zingo-netutils = "5.0.1"
zingo_test_vectors = { git = "https://github.com/zingolabs/infrastructure.git", tag = "zcash_local_net_v0.6.0" }
zcash_local_net = { git = "https://github.com/zingolabs/infrastructure.git", tag = "zcash_local_net_v0.6.0" }

# Librustzcash
zcash_protocol = { version = "0.9", features = ["local-consensus"] }
zcash_client_backend = "0.23"

# Zebra
zebra-chain = "9.0.0"
zebra-state = "8.0.0"
zebra-rpc = "9.0.0"

# Runtime
tokio = { version = "1.38", features = ["full"] }

# Network
http = "1.1"
tonic = "0.14"
tower = { version = "0.4", features = ["buffer", "util"] }

# Misc
anyhow = "1.0"
corez = "0.1"
futures = "0.3.30"
hex = "0.4"
once_cell = "1.20"
portpicker = "0.1"
serde_json = "1.0"
tempfile = "3.2"
tracing = "0.1"
wire_serialized_transaction_test_data = "1.0.0"
zip32 = "0.2.1"

[profile.test]
opt-level = 3
debug = true
