[package]
name = "zaino-proto"
description = "Holds tonic files and build logic for the lightwallet and darkside RPCs."
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[dependencies]
zebra-state = { workspace = true }
zebra-chain = { workspace = true }

# Miscellaneous Workspace
tonic = { workspace = true }

# Miscellaneous Crate
prost = { workspace = true }
tonic-prost = "0.14"

[build-dependencies]
tonic-build = { workspace = true }
which = { workspace = true }
tonic-prost-build = "0.14"
prost-build = "0.14"