[package]
name = "zaino-testutils"
description = "Crate containing Zaino test specific functionality."
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }
publish = false

[dependencies]
# Zaino
zaino-proto = { workspace = true }
zaino-state = { workspace = true, features = ["test_dependencies"] }
zaino-serve.workspace = true
zaino-testvectors.workspace = true
zaino-common.workspace = true
zainod = { workspace = true }

# Librustzcash
zcash_protocol = { version = "0.7.0", features = [
  "local-consensus",
] }
zcash_client_backend = { version = "0.20", features = ["lightwalletd-tonic"] }

# Zebra
zebra-chain = { workspace = true }
zebra-state.workspace = true

# Zingo-infra
zcash_local_net = { git = "https://github.com/zingolabs/infrastructure.git", rev = "20f3c206321825952fdf2d9d84947f5c9d2a1cf4" }
zingo_test_vectors = { git = "https://github.com/zingolabs/infrastructure.git", rev = "20f3c206321825952fdf2d9d84947f5c9d2a1cf4" }

# Zingo-common
zingo_common_components = { git = "https://github.com/zingolabs/zingo-common.git", tag = "zingo_common_components_v0.1.0", features = [ "for_test" ]}
zingo_netutils = { git = "https://github.com/zingolabs/zingo-common.git", rev = "b64dfd6d6a2a597a5456d1cc7b2bc9b649328187"  }

# ZingoLib
zingolib = { git = "https://github.com/zingolabs/zingolib.git", branch = "dev", features = [
    "testutils",
] }
zingolib_testutils = { git = "https://github.com/zingolabs/zingolib.git", branch = "dev" }

# Miscellaneous
http = { workspace = true }
once_cell = { workspace = true }
portpicker = { workspace = true }
tokio = { workspace = true }
tonic = { version = "0.13" } # TODO: unify in the workspace
tempfile = { workspace = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [
    "fmt",
    "env-filter",
    "time",
] }

# We don't need this as a direct dependency.
# Rather, we need to pin this version of proptest.
# if we don't, cargo update will update to the semver-compatible
# version 1.7, which depends on rand-0.9.1.
# This causes compiler errors in incrementalmerkletree, due a conflict
# with its rand version of 0.8.5.
# TODO: Investigate whether proptest has violated semver guarentees with
# its rand version update.
proptest = { workspace = true }
lazy_static = { workspace = true }
zip32 = {workspace = true}
