[workspace]
# Standalone workspace with its own Cargo.lock for the devtool wallet-client
# stack (zcash_local_net), kept out of the `integration-tests` workspace.
members = ["."]
resolver = "2"

[package]
name = "wallet-tests"
description = "Wallet-to-validator integration tests exercising the zcash-devtool wallet client against Zaino."
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[features]
# Single non-default gate for every devtool-incompatible / heavy test (the
# finalization heavies, send_to_all, monitor_unverified_mempool, the
# test-vector builder). They compile by default but are `#[ignore]`'d unless
# this feature is on; run them with `--features devtool-incompatible`. Each
# gated test's doc comment explains why it's here.
devtool-incompatible = []

[dependencies]
# Zaino test harness + packages
zaino-testutils = { path = "../zaino-testutils" }
zaino-state = { path = "../../packages/zaino-state", features = ["test_dependencies"] }
zaino-common = { path = "../../packages/zaino-common" }
zaino-fetch = { path = "../../packages/zaino-fetch" }
zaino-proto = { path = "../../packages/zaino-proto" }
zainod = { path = "../../packages/zainod" }

# zcash_local_net drives the zcash-devtool wallet client.
# TEMPORARY (zingolabs/infrastructure#269): pinned to an exact commit on the
# `add_client_support` branch (not the branch itself) so every machine resolves
# the same code — the Cargo.lock files are gitignored, and a moving branch ref
# otherwise resolves differently per cargo cache. Bump this rev as the
# coordinated work advances; restore the release tag once tagged upstream.
zcash_local_net = { git = "https://github.com/zingolabs/infrastructure.git", rev = "0cc7dab7d12dd906c23deddd4e1fc3c42cf0f083" }

# Zebra
zebra-chain = "9.0.0"
zebra-rpc = "9.0.0"
zebra-state = "8.0.0"

# Runtime / misc
tokio = { version = "1.38", features = ["full"] }
zcash_primitives = "0.28"
futures = "0.3.30"
hex = "0.4"
corez = "0.1"
tower = { version = "0.4", features = ["buffer", "util"] }
serde_json = "1.0"

[profile.test]
opt-level = 3
debug = true
