[package]
name = "zaino-testutils"
description = "Crate containing Zaino test specific functionality."
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }
publish = false

[features]
# **Experimental and alpha features**
# Exposes the **complete** set of experimental / alpha features currently implemented in Zaino.
experimental_features = ["transparent_address_history_experimental"]

# Activates transparent address history capability in zaino
#
# NOTE: currently this is only implemented in the finalised state.
transparent_address_history_experimental = [
    "zaino-state/transparent_address_history_experimental",
    "zaino-serve/transparent_address_history_experimental",
    "zainod/transparent_address_history_experimental"
]

[dependencies]
# Zaino
zaino-state = { workspace = true }
zaino-serve.workspace = true
zaino-common.workspace = true
zaino-proto = { workspace = true }
zaino-fetch = { workspace = true }
zainod = { workspace = true }

# Librustzcash
zcash_protocol = { workspace = true }

# Zebra
zebra-chain = { workspace = true }
zebra-state = { workspace = true }
zebra-rpc = { workspace = true }

# Zingo-infra
zcash_local_net = { workspace = true }

# Miscellaneous
futures = { workspace = true }
http = { workspace = true }
once_cell = { workspace = true }
portpicker = { workspace = true }
tokio = { workspace = true }
tonic.workspace = true
tracing.workspace = true
